force-app/main/default/objects/Service_Section__c/Service_Section__c.object-meta.xml
<CustomObject>
    <label>Service Section</label>
    <nameField>
        <label>Service Sections Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Sections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>