force-app/main/default/objects/Service_Section__c/fields/Collapsible__c.field-meta.xml
<CustomField>
    <fullName>Collapsible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collapsible</label>
    <type>Checkbox</type>
</CustomField>