force-app/main/default/objects/Service_Section__c/fields/Display_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Display_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Display Configuration</label>
    <referenceTo>Display_Configuration__c</referenceTo>
    <relationshipLabel>Service Sections</relationshipLabel>
    <relationshipName>Service_Sections</relationshipName>
    <type>Lookup</type>
</CustomField>